Fix site nav alignment and positioning

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -94,6 +94,16 @@ a {
   color: inherit;  // for telephone numbers in iOS
 }
 
+.nav li a {
+	font-size: 1.25em;
+}
+
+@media only screen and (min-width: 768px) {  // ie. @screen-sm (bootstrap)
+	.nav li a {
+		font-size: 1em;
+	}
+}
+
 em {
 	font-style: normal;
 	color: $secondary-accent-color;
@@ -297,6 +307,14 @@ p:link {
 	margin-left: 0;
 	margin-right: 0;
 }
+.navbar-header, #navbar {
+	width: auto;  // overwrite custom style div{width:100%} so bootstrap behaves normally
+}
+
+@media only screen and (min-width: 768px) {  // ie. @screen-sm (bootstrap)
+	// constrain width for desktop so that nav ul can sit right
+
+}
 .navbar-brand {
 	img {
 		width: 150px;
@@ -305,6 +323,16 @@ p:link {
 	height: fit-content;
 	margin-top: 12px;
 	margin-left: 15px;
+}
+
+#navbar {
+	text-align: center;
+	ul {
+		margin: 0 auto;
+		li a {
+
+		}
+	}
 }
 
 
